Bug 1883946: Allow AVSampleBufferDisplayLayer to enqueue a sample even when it doesn't want one. r=mac-reviewers,mstange

It is possible that we decode samples faster than the video layer can
display them. In such a case, we obviously won't display all the frames,
but we have to make a good decision of what to do with the extra
samples. One option is to drop them. This is safest, but runs the risk
of prevent an important sample from being displayed (for example, a
final frame markedly different from the preceding frames). It would be
better if we could enqueue all frames and let the video layer apply them
as it is able, eventually displaying the last frame enqueued.
Conveniently, the Apple documentation for AVQueuvedSampleBufferRendering
says "It is safe to call enqueueSampleBuffer: when readyForMoreMediaData
is NO, but don't enqueue sample buffers without bound." Probably the
steady frame rates of video content we send to video layers would not
qualify as being unbounded, since they are being processed at some
cadence and maybe *maybe* have their timestamps assessed as a group and
the last/most-recent "display immediately" frame is used, but we don't
know for sure.

If this leads to performance problems we can instead drop samples or try
to manipulate the internal algorithm a different way by supplying "real"
timestamps for each sample, as currently protected behind the pref
`gfx.core-animation.specialize-video.spoof-timing`.

Differential Revision: https://phabricator.services.mozilla.com/D212173